fix(SLB-288): adjust spacing

--- a/packages/ui/src/tailwind.css
+++ b/packages/ui/src/tailwind.css
@@ -39,25 +39,36 @@ ul li {
   @apply !text-base !font-medium !text-gray-900;
 }
 
+ul {
+  @apply  !pl-4;
+
+}
+
 .list-style--arrows li,
 .list-style--checkmarks li,
 .list-style--question-marks li {
   list-style-type: none;
   position: relative;
+  padding-left: 0.625rem;
+  margin-left:0;
 }
 
 .list-style--arrows li::before {
   position: absolute;
-  left: -1.25rem;
+  left:-1rem;
   vertical-align: middle;
   line-height: 1.5rem;
   margin-top: 2px;
   content: url('../static/icons/arrow.svg');
+  list-style-position: inside;
+  /* width: 14px;
+  margin-left: -14px; */
+
 }
 
 .list-style--checkmarks li::before {
   position: absolute;
-  left: -1.25rem;
+  left:-1.125rem;
   vertical-align: middle;
   line-height: 1.5rem;
   margin-top: 2px;
@@ -66,7 +77,7 @@ ul li {
 
 .list-style--question-marks li::before {
   position: absolute;
-  left: -1.25rem;
+  left:-1.125rem;
   vertical-align: middle;
   line-height: 1.5rem;
   margin-top: 1px;
